# housework

./: .gitignore  README.md
.github/workflows/: cd.yaml
deploy/: deploy.yml  docker-compose.yml.jinja2  hosts.ini  housework-api.conf.jinja2  housework-app.conf.jinja2
housework-api/: .coverage  Dockerfile  Untitled.ipynb  db.sqlite3  manage.py  pyproject.toml
housework-api/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
housework-api/hwk/: asgi.py  celery.py  environment.py  settings.py  urls.py  wsgi.py
housework-api/hwk/apps/api/: api.py  apps.py  auth.py
housework-api/hwk/apps/api/v1/: __init__.py  auth.py  job.py  job_configs.py  job_triggers.py  job_variants.py  notification.py  people.py  schema.py  team.py
housework-api/hwk/apps/jobs/: admin.py  apps.py  assigner.py  lifecycle.py  models.py  rules.py  tasks.py  triggers.py  utils.py
housework-api/hwk/apps/jobs/migrations/: 0001_initial.py  0002_initial.py
housework-api/hwk/apps/notifications/: apps.py  events.py  models.py  notify.py
housework-api/hwk/apps/notifications/migrations/: 0001_initial.py  0002_initial.py
housework-api/hwk/apps/people/: admin.py  apps.py  models.py
housework-api/hwk/apps/people/migrations/: 0001_initial.py  0002_remove_hwkuser_first_name_remove_hwkuser_last_name_and_more.py
housework-api/hwk/apps/teams/: admin.py  apps.py  models.py
housework-api/hwk/apps/teams/migrations/: 0001_initial.py  0002_alter_invitation_blocked.py
housework-api/tests/test_apps/test_jobs/: test_assigner.py
housework-app/: package-lock.json  package.json
housework-app/src/: App.tsx  (+3 more)
(+47 files in other folders)
